--- a/views/config.html
+++ b/views/config.html
@@ -2,8 +2,8 @@
 <main>
     <form spellcheck="false" autocomplete="off" id="cloud-config">
         <h3>
-            Muokkaa asetuksia
-            <div><%= coffeeMaker.domain %></div>
+            <small><%= coffeeMaker.domain %></small>
+            <span>Muokkaa asetuksia</span>
         </h3>
 
         <label>
@@ -12,7 +12,7 @@
         </label>
 
         <label>
-            <span>TP-Link Cloud -salasana <sup title="Salasanaasi ei koskaan lähetetä tälle palvelimelle, vaan selaimesi kommunikoi suoraan TP-Linkin palvelimen kanssa">?</sup></span>
+            <span>TP-Link Cloud -salasana</span>
             <input type="password" id="cloud-config-password">
         </label>
 
