--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/styles.css">
         <link rel="icon" href="/images/hot-coffee-cup-192.png">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="theme-color" content="#000000">
         <title><%= title %></title>
     </head>
     <body>
