Add simple statistics page

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <%- include('partials/header.html') %>
 <main>
     <form id="notifications">
+        <a href="/stats" style="position: absolute; left: 0; top: 0; padding: 1em; color: inherit;">Tilastot</a>
         <div>Ilmoita minulle heti, kun</div>
         <div id="subscribe-event-list">
             <div>
